--- a/.github/workflows/ci-gradle-nexus.yml
+++ b/.github/workflows/ci-gradle-nexus.yml
@@ -91,16 +91,18 @@ jobs:
         run: gu install ${{ inputs.install_graal_languages }}
       ########################
 
-      - name: build
+      - name: setup gradle
         uses: gradle/actions/setup-gradle@v4
-        with:
-          arguments: ${{ env.GRADLE_SWITCHES }} build
+      - name: build
+        run: ./gradlew ${{ env.GRADLE_SWITCHES }} build
+
 
       - name: publish-snapshots
         if: inputs.publish_snapshots && github.event_name != 'pull_request' && github.repository_owner == 'moderneinc'
         uses: gradle/actions/setup-gradle@v4
-        with:
-          arguments: ${{ env.GRADLE_SWITCHES }} snapshot publish -PforceSigning -x test
+      - name: build
+        if: inputs.publish_snapshots && github.event_name != 'pull_request' && github.repository_owner == 'moderneinc'
+        run: ./gradlew ${{ env.GRADLE_SWITCHES }} snapshot publish -PforceSigning -x test
         env:
           ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.ossrh_username }}
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.ossrh_token }}
