--- a/.github/workflows/publish-maven-central.yml
+++ b/.github/workflows/publish-maven-central.yml
@@ -61,28 +61,29 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: setup gradle
+        uses: gradle/actions/setup-gradle@v4
+
       - name: publish-candidate
         if: contains(github.ref, '-rc.')
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          arguments: |
-            ${{ env.GRADLE_SWITCHES }}
-            -Preleasing
-            -Prelease.disableGitChecks=true
-            -Prelease.useLastTag=true
-            candidate
-            publish
+        run: |
+            ./gradlew  \
+            ${{ env.GRADLE_SWITCHES }} \
+            -Preleasing \
+            -Prelease.disableGitChecks=true \
+            -Prelease.useLastTag=true \
+            candidate \
+            publish \
             closeAndReleaseSonatypeStagingRepository
 
       - name: publish-release
         if: (!contains(github.ref, '-rc.'))
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          arguments: |
-            ${{ env.GRADLE_SWITCHES }}
-            -Preleasing
-            -Prelease.disableGitChecks=true
-            -Prelease.useLastTag=true
-            final
-            publish
+        run: |
+            ./gradlew \
+            ${{ env.GRADLE_SWITCHES }} \
+            -Preleasing \
+            -Prelease.disableGitChecks=true \
+            -Prelease.useLastTag=true \
+            final \
+            publish \
             closeAndReleaseSonatypeStagingRepository
