--- a/.github/workflows/pr-run-recipes.yml
+++ b/.github/workflows/pr-run-recipes.yml
@@ -81,16 +81,12 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      # Apply license headers
-      - name: Apply license headers
-        run: ./gradlew ${{ env.GRADLE_SWITCHES }} licenseFormat
-
       # Execute best practices recipe
       - name: Create temporary files
         run: |
           echo "${{ inputs.rewrite_yml }}" > rewrite.yml
           echo "${{ inputs.init_gradle }}" > rewrite-init.gradle
-      - name: Apply OpenRewrite best practices
+      - name: Apply Moderne best practices
         run: ./gradlew ${{ env.GRADLE_SWITCHES }} rewriteRun --init-script rewrite-init.gradle -Drewrite.activeRecipe=${{ inputs.recipe }}
       - name: Remove temporary files
         run: rm -f rewrite.yml rewrite-init.gradle
