--- a/.github/workflows/pr-run-recipes.yml
+++ b/.github/workflows/pr-run-recipes.yml
@@ -21,6 +21,27 @@ on:
           description: Applies best practices for Moderne Inc. SaaS repositories.
           recipeList:
             - org.openrewrite.java.testing.assertj.Assertj
+            #- org.openrewrite.java.testing.cleanup.BestPractices
+            - org.openrewrite.java.logging.slf4j.Slf4jBestPractices
+            - org.openrewrite.java.OrderImports:
+                removeUnused: true
+            - io.moderne.NullabilityBestPractices
+          ---
+          type: specs.openrewrite.org/v1beta/recipe
+          name: io.moderne.NullabilityBestPractices
+          displayName: Nullability best practices
+          description: Use JSpecify nullable annotations; drop Nonnull annotations; use `NullMarked` on `package-info.java` instead.
+          recipeList:
+            - org.openrewrite.java.jspecify.MigrateFromOpenRewriteAnnotations
+            - org.openrewrite.staticanalysis.NullableOnMethodReturnType
+            - org.openrewrite.java.RemoveAnnotation:
+                annotationPattern: '@org.jetbrains.annotations.NotNull'
+            - org.openrewrite.java.RemoveAnnotation:
+                annotationPattern: '@javax.annotation.Nonnull'
+            - org.openrewrite.java.RemoveAnnotation:
+                annotationPattern: '@jakarta.annotation.Nonnull'
+            - org.openrewrite.java.jspecify.MigrateToJspecify
+
       init_gradle:
         description: The Gradle init script to apply to the PR
         type: string
