use openrewrite/rewrite-rewrite instead of archived repository

--- a/.github/workflows/pr-run-recipes.yml
+++ b/.github/workflows/pr-run-recipes.yml
@@ -65,7 +65,7 @@ on:
           rootProject {
             plugins.apply(org.openrewrite.gradle.RewritePlugin)
             dependencies {
-                rewrite('org.openrewrite.recipe:rewrite-recommendations:latest.release')
+                rewrite('org.openrewrite.recipe:rewrite-rewrite:latest.release')
             }
             afterEvaluate {
               if (repositories.isEmpty()) {
