Adopt `moderneinc/googleapis-code-suggester@main`

--- a/.github/workflows/pr-post-suggestions.yml
+++ b/.github/workflows/pr-post-suggestions.yml
@@ -44,7 +44,7 @@ jobs:
           rm pr_number.txt
 
       # Post suggestions as a comment on the PR
-      - uses: moderneinc/googleapis-code-suggester@v4-moderne
+      - uses: moderneinc/googleapis-code-suggester@main
         with:
           command: review
           pull_number: ${{ env.PR_NUMBER }}
