--- a/.github/workflows/pr-run-recipes.yml
+++ b/.github/workflows/pr-run-recipes.yml
@@ -46,7 +46,7 @@ on:
                 annotationPattern: '@javax.annotation.Nonnull'
             - org.openrewrite.java.RemoveAnnotation:
                 annotationPattern: '@jakarta.annotation.Nonnull'
-            - org.openrewrite.java.jspecify.MigrateToJspecify
+            - org.openrewrite.java.jspecify.MigrateToJSpecify
             - tech.picnic.errorprone.refasterrules.TimeRulesRecipes
 
       init_gradle:
