--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -7,7 +7,9 @@ on:
       java_version:
         description: What version of Java to use
         type: number
-        default: 21
+        default: |
+          17
+          21
         required: false
       publish_tests:
         description: Whether to attempt publishing unit test results.
