--- a/.github/workflows/publish-containerized-snapshot.yml
+++ b/.github/workflows/publish-containerized-snapshot.yml
@@ -7,7 +7,9 @@ on:
       java_version:
         description: What version of Java to use
         type: number
-        default: 21
+        default: |
+          17
+          21
         required: false
       runner:
         description: Which runner to use
