--- a/.github/workflows/publish-maven-central.yml
+++ b/.github/workflows/publish-maven-central.yml
@@ -7,7 +7,9 @@ on:
       java_version:
         description: What version of Java to use
         type: number
-        default: 21
+        default: |
+          17
+          21
         required: false
     secrets:
       gradle_enterprise_access_key:
