--- a/.github/workflows/pr-run-recipes.yml
+++ b/.github/workflows/pr-run-recipes.yml
@@ -32,20 +32,22 @@ on:
                 removeUnused: true
             - org.openrewrite.staticanalysis.RemoveExtraSemicolons
             - io.moderne.NullabilityBestPractices
+            - org.openrewrite.staticanalysis.ReplaceLambdaWithMethodReference
           ---
           type: specs.openrewrite.org/v1beta/recipe
           name: io.moderne.NullabilityBestPractices
           displayName: Nullability best practices
-          description: Use JSpecify nullable annotations; drop Nonnull annotations; use `NullMarked` on `package-info.java` instead.
+          description: Use JSpecify nullable annotations; drop Nonnull annotations; use
+            `NullMarked` on `package-info.java` instead.
           recipeList:
             - org.openrewrite.java.jspecify.MigrateFromOpenRewriteAnnotations
             - org.openrewrite.staticanalysis.NullableOnMethodReturnType
             - org.openrewrite.java.RemoveAnnotation:
-                annotationPattern: '@org.jetbrains.annotations.NotNull'
+                annotationPattern: "@org.jetbrains.annotations.NotNull"
             - org.openrewrite.java.RemoveAnnotation:
-                annotationPattern: '@javax.annotation.Nonnull'
+                annotationPattern: "@javax.annotation.Nonnull"
             - org.openrewrite.java.RemoveAnnotation:
-                annotationPattern: '@jakarta.annotation.Nonnull'
+                annotationPattern: "@jakarta.annotation.Nonnull"
             - org.openrewrite.java.jspecify.MigrateToJSpecify
             - tech.picnic.errorprone.refasterrules.TimeRulesRecipes
 
