--- a/.github/workflows/pr-run-recipes.yml
+++ b/.github/workflows/pr-run-recipes.yml
@@ -7,7 +7,10 @@ on:
       java_version:
         description: What version of Java to use
         type: number
-        default: 17
+        default: |
+          25
+          17
+          21
         required: false
       recipe:
         description: The OpenRewrite recipe to apply to the PR
