--- a/.github/workflows/publish-maven-central.yml
+++ b/.github/workflows/publish-maven-central.yml
@@ -7,10 +7,7 @@ on:
       java_version:
         description: What version of Java to use
         type: number
-        default: |
-          25
-          17
-          21
+        default: 17
         required: false
     secrets:
       gradle_enterprise_access_key:
@@ -65,7 +62,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-java@v4
+      - uses: actions/setup-java@v5
         with:
           distribution: temurin
           java-version: ${{ inputs.java_version }}
