Drop `EnricoMi/publish-unit-test-result-action`

--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -76,14 +76,8 @@ jobs:
       - name: build
         run: ./gradlew ${{ env.GRADLE_SWITCHES }} build
 
-      - name: publish-tests
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always() && inputs.publish_tests
-        with:
-          files: ./**/build/test-results/**/TEST-*.xml
-
       - name: Upload test reports on failure
-        if: failure()
+        if: failure() && inputs.publish_tests
         uses: actions/upload-artifact@v6
         with:
           name: test-reports-${{ github.run_id }}
@@ -93,7 +87,7 @@ jobs:
           retention-days: 14
 
       - name: Upload build logs on failure
-        if: failure()
+        if: failure() && inputs.publish_tests
         uses: actions/upload-artifact@v6
         with:
           name: build-logs-${{ github.run_id }}
